--- a/client/hues/package.json
+++ b/client/hues/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
